--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,40 +16,31 @@
 
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
-
+// Typography styles
 h1, h2, h3 {
     font-family: 'Open Sans', sans-serif;
 }
-
+// Background gradient
 .navbar, .home-callout {
     //Gradient provided by  @_ighosh at uigradients.com
     background: #005C97; /* fallback for old browsers */
     background: -webkit-linear-gradient(to left, #005C97 , #363795); /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to left, #005C97 , #363795); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
-
+// Nav styles
 .navbar {
     border: none;
 }
 
-.navbar-default .navbar-brand {
-    color: white;
-}
-
+.navbar-default .navbar-brand, 
 .navbar-default .navbar-nav > li > a {
     color: white;
+    &:hover {
+        color: white;
+        opacity: 0.75;
+    }
 }
-
-.navbar-default .navbar-brand:hover {
-    color: white;
-    opacity: 0.75;
-}
-
-.navbar-default .navbar-nav > li > a:hover{
-    color: white;
-    opacity: 0.75;
-}
-
+// home page styles
 .home-callout {
     color: white;
     margin-top: -20px;
