--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,5 @@
 <div class="container text-center">
-    <h1>About page</h1>
-    <p>We are DevMatch. Our company focuses on creating an exclusive community
-    developers and entrepeneurs to meet.</p>
+    <h1>About Us</h1>
+    <p>We are DevMatch. Our company focuses on creating an exclusive community for
+    developers, investors and entrepeneurs to meet.</p>
 </div>
